Fix logo spacing and font size in Sidebar component, update font weight and color in Widget component, and add new charts to Home page

--- a/src/Components/Sidebar/sidebar.scss
+++ b/src/Components/Sidebar/sidebar.scss
@@ -4,28 +4,28 @@
     height: 100vh;
 
     .top {
+        margin: 20px;
         height: 50px;
         display: flex;
-
         align-items: center;
         justify-content: center;
 
         .logo {
             color: #0FA44A;
             font-weight: 800;
-            font-size: large;
+            font-size: 30px;
         }
     }
 
     .center {
         display: flex;
-
-        margin: 10px 10px 10px 0;
+        margin: 10px 0 10px 0;
 
         ul {
             margin: 0;
             padding: 0;
             list-style: none;
+            width: 100%;
 
             li {
                 display: flex;
@@ -55,7 +55,8 @@
                 span {
                     font-size: 20px;
                     margin-left: 10px;
-                    font-weight: 400;
+                    font-weight: 300;
+                    color: #323232f3;
                 }
             }
 
@@ -65,11 +66,11 @@
     }
 
     .bottom {
+        margin-top: 150px;
+        margin-bottom: 20px;
         padding: 15px;
         display: flex;
         align-items: center;
-        margin: 100px 0 10px 0;
-
 
         .icon {
             font-size: 18px;
