--- a/src/Components/Widget/widget.scss
+++ b/src/Components/Widget/widget.scss
@@ -20,7 +20,7 @@
 
         .numbers {
             font-size: 26px;
-            font-weight: 600;
+            font-weight: 500;
             color: #1A1A1A;
         }
 
