--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,9 +1,9 @@
 .home {
     display: flex;
+    margin: 0;
 
     .homeContainer {
-        // background-color: #FBFBFB;
-        background-color: aqua;
+        background-color: #FBFBFB;
         flex: 6;
 
         .widget-title {
@@ -29,10 +29,15 @@
             }
         }
 
-        .widgets {
+        .widgets,
+        .charts {
             display: flex;
             gap: 20px;
             padding: 20px;
+        }
+
+        .charts {
+            padding: 5px 20px;
         }
     }
 }
